Separate User details and user Image API